# garglk

./: CMakeLists.txt  INSTALL  INSTALL.md  Jamrules  Toolchain-msvc.cmake  gargoyle-buildrpm.sh  gargoyle_osx.sh  installer.nsi  msvc.sh  windows.sh
.github/workflows/: appimage.yml  build.yml  fedora.yml  freebsd.yml  macos-dmg.yml  macos-qt.yml  main.yml  ubuntu-deb.yml
Mac/: build.rb
garglk/: CMakeLists.txt  Jamfile  Make.garglk.in  babeldata.c  babeldata.cpp  config.c  config.cpp  draw.cpp  event.c  event.cpp  fontfc.cpp  fontmac.mm  fontwin.cpp  garglk.cpp  garglk.h  garglk.ini  gargoyle.cpp  glk.h  glkstart.h  imgload.cpp  imgscale.cpp  imgscalemac.mm  imgscaleqt.cpp  launcher.cpp  launcher.h  launchmac.mm  launchqt.cpp  main.cpp  sndnull.cpp  sndqt.cpp  sndsdl.cpp  style.cpp  sysmac.h  sysmac.mm  sysqt.cpp  sysqt.h  theme.cpp  ttsmac.mm  ttsnull.cpp  ttsspeechd.cpp  (+9 more)
garglk/cheapglk/: cgblorb.cpp  cgfref.cpp  cggestal.cpp  cgmisc.cpp  cgstream.cpp  cgunicod.cpp  gi_blorb.h  gi_dispa.h  glk.h  glkstart.h
terps/: CMakeLists.txt
terps/agility/: os_glk.c
terps/bocfel/: glkstart.c  io.cpp  io.h  screen.c
terps/jacl/: jacl.c
terps/magnetic/Glk/: glk.c
terps/scare/: os_glk.c
terps/tads/: CMakeLists.txt
terps/tads/glk/: osglk.c  osglkban.c
winglk/: CMakeLists.txt
winglk/glkwrap/: CMakeLists.txt  glkwrap.c
